fix/inventory_memory_leak_fix